//新增HTML架構，socket接收到loginCall

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,28 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
+    <link rel="icon" href="favicon.ico">
+    <title>GAME</title>
+    <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
+    <!-- Font Icons&font -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <!-- tab JavaScript  -->
+    <!-- <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="../src/assets/js/jquery.bbq.js"></script>
+    <script src="../src/assets/js/jquery.atAccordionOrTabs.js"></script> -->
+
+    <!-- <script type="text/javascript"> -->
+    <!-- $('.demo').accordionortabs(); -->
+    <!-- </script> -->
+    <!-- Bootstrap JavaScript --> 
+    <!-- <script src="../src/assets/js/bootstrap.bundle.js"></script>
+    <script src="../src/assets/js/bootstrap.min.js" ></script> -->
+
   </body>
 </html>
