//完成點選籌碼高亮、射擊後注區產生籌碼

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="zh-Hunt">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,23 +9,13 @@
     <title>GAME</title>
     <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
     <!-- Font Icons&font -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <div id="app"></div>
-    <!-- tab JavaScript  -->
-    <!-- <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="../src/assets/js/jquery.bbq.js"></script>
-    <script src="../src/assets/js/jquery.atAccordionOrTabs.js"></script> -->
-
-    <!-- <script type="text/javascript"> -->
-    <!-- $('.demo').accordionortabs(); -->
-    <!-- </script> -->
-    <!-- Bootstrap JavaScript --> 
-    <!-- <script src="../src/assets/js/bootstrap.bundle.js"></script>
-    <script src="../src/assets/js/bootstrap.min.js" ></script> -->
-
+    <div id="app">
+    </div>
   </body>
 </html>
