--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,6 @@
   <body>
     <div id="app">
     </div>
+    <!-- <script src="../src/assets/css/bootstrap.min.css"></script> -->
   </body>
 </html>
