--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,6 @@
   <body>
     <div id="app">
     </div>
+    <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
